Bug 417457 - entry of an app that is not playing audio has sound icon while another app plays audio
Summary: entry of an app that is not playing audio has sound icon while another app pl...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.18.4
Platform: Arch Linux Linux
: VHI normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: regression
: 384217 417766 417772 417842 418742 425594 428547 429961 432275 434831 436502 436986 437924 442410 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-11 21:00 UTC by Patrick Silva
Modified: 2021-09-16 17:33 UTC (History)
30 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (51.89 KB, image/png)
2020-02-11 21:00 UTC, Patrick Silva
Details
Taskbar bug (611.21 KB, image/png)
2021-04-12 14:01 UTC, Domker
Details
Elisa is actually playing audio, but doesn't show it; other apps do instead (94.35 KB, image/png)
2021-05-25 16:08 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-02-11 21:00:35 UTC
Created attachment 125872 [details]
screenshot

SUMMARY
reproducible on both Arch Linux and neon unstable edition

STEPS TO REPRODUCE
1. open Dolphin
2. open an audio or a video with VLC player via Dolphin
3. 

OBSERVED RESULT
entry of Dolphin in task manager has sound icon while VLC plays
the audio/video. See the attached screenshot.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.0
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.68.0
Qt Version: 5.13.2
Comment 1 Nate Graham 2020-02-12 22:15:56 UTC
Wow that's strange! Can reproduce.
Comment 2 gvgeo 2020-02-13 07:05:34 UTC
I believe hein's comment is relevant.
https://phabricator.kde.org/D25874
Comment 3 Kai Uwe Broulik 2020-02-13 08:05:03 UTC
Yeah, if I launch VLC from Dolphin, VLC will be child process of Dolphin and then Dolphin gets marked.
Comment 4 JanKusanagi 2020-02-14 21:01:48 UTC
Can reproduce on Mageia (Plasma 5.18.0, KF 5.67.0, Qt 5.14.1), with mpv which suffers from the same.

I'm guessing if the process generating the sound has a taskbar entry for itself, like these regular media players, unlike those "web-browser-extra-process-players", it can just stop looking for more task manager entries to "mark"?
Comment 5 Nate Graham 2020-02-18 21:10:43 UTC
*** Bug 417842 has been marked as a duplicate of this bug. ***
Comment 6 Kai Uwe Broulik 2020-03-13 08:39:43 UTC
*** Bug 418742 has been marked as a duplicate of this bug. ***
Comment 7 pveax 2020-04-08 04:09:36 UTC
Hi!

Confirmed for Dolphin, VLC, Opera web browser also.

What info is needed to help to start investigation of the "world-wide" lack?

Thanks!

---
SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma: Manjaro Linux 19.0.2 (stable branch, currently up-to-date)
(available in About System)
KDE Plasma Version: 5.18.3
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.1
Comment 8 pveax 2020-04-08 04:14:43 UTC
I've been changed version to newer actual (5.18.0 -> 5.18.3) as I see it in my case.
Comment 9 pveax 2020-04-10 16:32:30 UTC
I changed "Version" field again: I got update to the 5.18.4. I see the bug. I open qBittorrent, than open download folder with downloaded file (via Dolphin), open that file by click: VLC media player opens and woofer icon on Dolphin and VLC appears and disappears (while VLC paused) simultaneously so by click on any woofer icon I turn on/off the sound of both apps (Dolphin and VLC).

SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma: Manjaro Linux 19.0.2 (stable branch, currently up-to-date)
(available in About System)
KDE Plasma Version: 5.18.4 (new)
KDE Frameworks Version: 5.68.0 (the same)
Qt Version: 5.14.2 (new)

Also I installed and currently running new kernel: was 5.5.13, and now kernel is 5.6.2-1-MANJARO.

Thanks!
Comment 10 pveax 2020-04-20 11:20:03 UTC
Persists on:

Operating System: Manjaro Linux 20.0
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2
Kernel Version: 5.6.5-2-MANJARO
Comment 11 JanKusanagi 2020-04-20 14:03:58 UTC
(In reply to pveax from comment #10)
> Persists on:

Please stop. If the bug was fixed, it would have been clear right here.

You're not helping anyone by commenting, at every little update, that "still happens".
Comment 12 Patrick Silva 2020-08-21 00:42:15 UTC
*** Bug 425594 has been marked as a duplicate of this bug. ***
Comment 13 Bug Janitor Service 2020-08-21 12:55:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/124
Comment 14 Patrick Silva 2020-10-27 17:29:34 UTC
*** Bug 428338 has been marked as a duplicate of this bug. ***
Comment 15 Patrick Silva 2020-11-02 02:07:37 UTC
*** Bug 428547 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2020-12-03 21:49:55 UTC
*** Bug 429961 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2021-01-06 18:03:04 UTC
*** Bug 384217 has been marked as a duplicate of this bug. ***
Comment 18 Nate Graham 2021-01-29 15:08:02 UTC
*** Bug 432275 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2021-03-10 22:13:30 UTC
*** Bug 417766 has been marked as a duplicate of this bug. ***
Comment 20 Nate Graham 2021-03-11 22:22:59 UTC
*** Bug 417772 has been marked as a duplicate of this bug. ***
Comment 21 Nate Graham 2021-03-23 17:36:59 UTC
*** Bug 434831 has been marked as a duplicate of this bug. ***
Comment 22 Méven Car 2021-04-02 04:11:41 UTC
A simple way to fix this would be to restrict the ParentPid transitivity to process sharing the same exe as in:

9059 is a firefox content process.

meven@meven-XPS-13-9370:~$ ll /proc/9059/exe 
Permissions Size User  Date Modified  Name
lrwxrwxrwx     0 meven  2 avril  5:45 /proc/9059/exe -> /usr/lib/firefox/firefox
meven@meven-XPS-13-9370:~$ ll /proc/4733/exe 
Permissions Size User  Date Modified  Name
lrwxrwxrwx     0 meven  1 avril 19:58 /proc/4733/exe -> /usr/lib/firefox/firefox


KSysGuard::Process does not expose yet the executable though.
Comment 23 Méven Car 2021-04-02 04:23:57 UTC
(In reply to Méven Car from comment #22)
> A simple way to fix this would be to restrict the ParentPid transitivity to
> process sharing the same exe as in:
> 
> 9059 is a firefox content process.
> 
> meven@meven-XPS-13-9370:~$ ll /proc/9059/exe 
> Permissions Size User  Date Modified  Name
> lrwxrwxrwx     0 meven  2 avril  5:45 /proc/9059/exe ->
> /usr/lib/firefox/firefox
> meven@meven-XPS-13-9370:~$ ll /proc/4733/exe 
> Permissions Size User  Date Modified  Name
> lrwxrwxrwx     0 meven  1 avril 19:58 /proc/4733/exe ->
> /usr/lib/firefox/firefox
> 
> 
> KSysGuard::Process does not expose yet the executable though.

KSysGuard::Process::name() or KSysGuard::Process::cmdline() could be directly used for this though.
Comment 24 Bug Janitor Service 2021-04-02 04:35:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/407
Comment 25 Domker 2021-04-12 14:01:42 UTC
Created attachment 137529 [details]
Taskbar bug

I'm facing the same bug and it applies to Dophin and other apps.

Operating System: Arch Linux
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Kernel Version: 5.11.13-arch1-1
OS Type: 64-bit
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4790K CPU @ 4.00GHz
Memory: 15.6 GiB of RAM
Graphics Processor: GeForce GTX 980/PCIe/SSE2
Comment 26 Méven Car 2021-04-13 18:52:03 UTC
Git commit 556c0a498e217dc53a935116c2135ecc22ba4d51 by Méven Car.
Committed on 13/04/2021 at 18:51.
Pushed by meven into branch 'meven/plasma-desktop-bug-417457'.

TaskManager: Restrict parents process to those sharing the same command

M  +25   -1    applets/taskmanager/plugin/backend.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/556c0a498e217dc53a935116c2135ecc22ba4d51
Comment 27 Nate Graham 2021-04-13 18:56:04 UTC
Not fixed yet; the commit hookscript just closed it automatically because that branch that was just pushed wasn't prefixed with "work/" despite having a BUG: keyword in it.
Comment 28 Bug Janitor Service 2021-04-13 18:58:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/419
Comment 29 David Edmundson 2021-04-29 21:32:47 UTC
Git commit c59edc9826a64c51f9ed41f7ccaf2cc5ade86d4b by David Edmundson, on behalf of Méven Car.
Committed on 29/04/2021 at 20:54.
Pushed by ngraham into branch 'master'.

TaskManager: Restrict parents process to those sharing the same cgroup

M  +18   -1    applets/taskmanager/plugin/backend.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/c59edc9826a64c51f9ed41f7ccaf2cc5ade86d4b
Comment 30 Nate Graham 2021-05-03 20:05:25 UTC
*** Bug 436502 has been marked as a duplicate of this bug. ***
Comment 31 Nate Graham 2021-05-13 15:40:31 UTC
*** Bug 436986 has been marked as a duplicate of this bug. ***
Comment 32 Nate Graham 2021-05-25 16:08:32 UTC
Created attachment 138779 [details]
Elisa is actually playing audio, but doesn't show it; other apps do instead

I have unfortunately reproduced the issue on current git master with systemd startup enabled. :( I'm on Fedora 34 with full PipeWire support. See attached screenshot.

It seems somewhat random, though. It's not *always* in this state. Just sometimes.
Comment 33 Nate Graham 2021-06-03 00:48:33 UTC
So ever since moving from openSUSE Tumbleweed to Fedora, I am experiencing this bug nearly constantly when Elisa is playing audio. The audio indicator appears on all the non-running apps. It's an extremely odd effect.
Comment 34 David Edmundson 2021-06-03 09:50:25 UTC
>ith systemd startup enabled.

This should not be relevant.

>I have unfortunately reproduced the issue on current git master

So is this with a version older than c59edc9826a64c51f9ed41f7ccaf2cc5ade86d4b? if not then we don't want to reopen this.
Comment 35 Nate Graham 2021-06-03 13:06:14 UTC
c59edc9826a64c51f9ed41f7ccaf2cc5ade86d4b (plasmna-desktop) was committed a month and a half ago, so I have it, yes. I rebuild all KDE stuff from source daily.
Comment 36 Nate Graham 2021-06-08 21:40:05 UTC
*** Bug 437924 has been marked as a duplicate of this bug. ***
Comment 37 Nate Graham 2021-06-15 20:16:38 UTC
*** Bug 438565 has been marked as a duplicate of this bug. ***
Comment 38 Nate Graham 2021-06-15 20:17:17 UTC
Like the person in 438565, I started experiencing this a lot when I started using PipeWire. Perhaps related.
Comment 39 Fabio Pesari 2021-06-18 06:32:36 UTC
Can reproduce while playing vocal messages on Telegram-desktop. The bug appeared the day I switched from Pulseaudio to Pipewire-pulseaudio.
Comment 40 David Edmundson 2021-06-25 10:30:42 UTC
The issue at hand was fixed. 

If we have separate issue specifically with pipewire, lets keep a new bug with new history, so we're not drowning in noise. I reopened 438565
Comment 41 Nate Graham 2021-09-16 17:33:35 UTC
*** Bug 442410 has been marked as a duplicate of this bug. ***